2008-03-04  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_method_to_ir2): Optimize the ldloca+initobj combination.

	* generics.cs: Add a test for the ldloca+initobj optimization.

2008-03-03  Zoltan Varga  <vargaz@gmail.com>

	* local-propagation.c (mono_branch_to_cmov): Fix checking of whenever negation
	of the condition is needed.

2008-03-02  Zoltan Varga  <vargaz@gmail.com>

	* local-propagation.c (mono_local_deadce): Avoid reverse copyprop on hard
	registers.

	* method-to-ir.c (mono_method_check_inlining): Avoid disabling inlining if the
	called methods class has no cctor.

	* mini-amd64.c (mono_arch_emit_call): Emit most parameters in non-reverse order.
	(mono_arch_emit_prolog): Re-enable the first bblock optimization.

	* local-propagation.c (mono_local_deadce): Make the reverse copyprop optimization
	more generic.

2008-02-29  Zoltan Varga  <vargaz@gmail.com>

	* mini-ops.h mini-s390.c inssel-s390.brg: Ongoing S390 work.

	* method-to-ir.c (mono_spill_global_vars): Fix a comment.

2008-02-16  Zoltan Varga  <vargaz@gmail.com>

	* mini-s390.c cpu-s390.md: Ongoing s390 work.

2008-02-15  Zoltan Varga  <vargaz@gmail.com>

	* mini-s390.h mini-s390.c cpu-s390.md mini-ops.h: Ongoing s390 work.

	* exceptions-arm.c mini-arm.c cpu-arm.md: Fix arm build.

	* method-to-ir.c (mini_emit_inst_for_method): Fix 64 bit issues in array access
	implementation.
	(mini_emit_ldelema_1_ins): Ditto.

	* mini-ia64.c cpu-ia64.md: Fix ia64 build.

2008-02-14  Zoltan Varga  <vargaz@gmail.com>

	* cpu-sparc.md mini-sparc.c: Fix sparc build.

	* mini-x86.c (mono_arch_emit_outarg_vt): Pass a reasonable alignment to
	mini_emit_memcpy2 ().

	* cpu-x86.md mini-x86.c: Fix x86 build.

2008-02-13  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (mono_arch_emit_outarg_vt): Pass a reasonable alignment to
	mini_emit_memcpy2 ().

2008-02-29  Zoltan Varga  <vargaz@gmail.com>

	* mini-ops.h: Remove OP_SPARC_INARG_VT, add a new OP_VTARG_ADDR opcode instead